--- a/DrM/cfgs/config.yaml
+++ b/DrM/cfgs/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - task@_global_: dog_run # manipulator_bring_ball
-  - agent@_global_: drm
+  - agent@_global_: drqv2 # drm
   - override hydra/launcher: submitit_local
 
 # task settings
@@ -18,7 +18,7 @@ num_eval_episodes: 10
 save_snapshot: true
 # wandb
 use_wandb: true
-wandb_project: drm
+wandb_project: VRL_Research
 wandb_entity: hirekatsu0523
 # replay buffer
 replay_buffer_size: 1000000
